<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/layout_item_song"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@android:color/white"
    android:padding="@dimen/dp_16">

    <ImageView
        android:id="@+id/image_artist"
        android:layout_width="@dimen/dp_40"
        android:layout_height="@dimen/dp_40"
        android:contentDescription="@null"
        android:src="@drawable/ic_music_box"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_16"
        android:fontFamily="sans-serif"
        android:text="@string/my_artist"
        android:textSize="@dimen/sp_16"
        app:layout_constraintLeft_toRightOf="@id/image_artist" />

    <TextView
        android:id="@+id/text_artist_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_16"
        android:ellipsize="end"
        android:fontFamily="sans-serif"
        android:maxLines="1"
        android:text="@string/artist"
        android:textSize="@dimen/sp_16"
        app:layout_constraintLeft_toRightOf="@+id/text_view"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/text_total_song"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_16"
        android:fontFamily="sans-serif"
        android:text="@string/total_song"
        android:textSize="@dimen/sp_14"
        app:layout_constraintLeft_toRightOf="@id/image_artist"
        app:layout_constraintTop_toBottomOf="@+id/text_artist_name" />
</android.support.constraint.ConstraintLayout>
